--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=views/welcome_message.php">
+    <title>Document</title>
+</head>
+<body>
+    Redirecting.......
+</body>
+</html>
